--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue": "^2.5.3",
     "vue-awesome": "^2.3.4",
     "vue-simple-spinner": "^1.2.8",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.4.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
