--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "popper.js": "^1.12.9",
     "vue": "^2.5.3",
     "vue-awesome": "^2.3.4",
+    "vue-router": "^3.0.1",
     "vue-simple-spinner": "^1.2.8",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.4.2"
