--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "bootstrap-vue": "^1.2.0",
     "moment": "^2.20.1",
     "popper.js": "^1.12.9",
+    "prettier": "^1.10.2",
     "vue": "^2.5.3",
     "vue-awesome": "^2.3.4",
+    "vue-img-loader": "^0.2.1",
     "vue-router": "^3.0.1",
     "vue-simple-spinner": "^1.2.8",
     "vuex": "^3.0.1",
