--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-img-loader": "^0.2.1",
     "vue-router": "^3.0.1",
     "vue-simple-spinner": "^1.2.8",
+    "vuejs-dialog": "^0.9.0",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.4.2"
   },
@@ -32,6 +33,8 @@
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
+    "eslint": "^4.19.1",
+    "eslint-plugin-vue": "^4.4.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "node-sass": "^4.6.1",
