--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "bootstrap": "^4.0.0-beta.2",
-    "bootstrap-vue": "^1.2.0",
-    "moment": "^2.20.1",
-    "popper.js": "^1.12.9",
-    "prettier": "^1.10.2",
-    "vue": "^2.5.3",
-    "vue-awesome": "^2.3.4",
+    "bootstrap": "^4.1.0",
+    "bootstrap-vue": "^2.0.0-rc.8",
+    "moment": "^2.22.1",
+    "popper.js": "^1.14.3",
+    "prettier": "^1.12.1",
+    "vue": "^2.5.16",
+    "vue-awesome": "^2.3.5",
     "vue-img-loader": "^0.2.1",
     "vue-router": "^3.0.1",
     "vue-simple-spinner": "^1.2.8",
     "vuejs-dialog": "^0.9.0",
     "vuex": "^3.0.1",
-    "vuex-persistedstate": "^2.4.2"
+    "vuex-persistedstate": "^2.5.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -31,18 +31,18 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-3": "^6.24.1",
-    "cross-env": "^5.1.1",
-    "css-loader": "^0.28.7",
+    "cross-env": "^5.1.4",
+    "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
-    "eslint-plugin-vue": "^4.4.0",
+    "eslint-plugin-vue": "^4.5.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
-    "node-sass": "^4.6.1",
-    "sass-loader": "^6.0.6",
+    "file-loader": "^1.1.11",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^6.0.7",
     "style-loader": "^0.19.0",
-    "vue-loader": "^13.5.0",
-    "vue-template-compiler": "^2.5.3",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "vue-loader": "^13.7.1",
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.2"
   }
 }
