--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "deploy":
+      "scp -r dist aso:www/rankgames2/ && scp index.html aso:www/rankgames2"
   },
   "dependencies": {
     "axios": "^0.17.1",
