--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "deploy": "scp -r dist aso:www/rankgames2/ && scp index.html aso:www/rankgames2"
+    "deploy":
+      "scp -r dist aso:www/rankgames2/ && scp index.html aso:www/rankgames2",
+    "bd": "npm run build && npm run deploy"
   },
   "dependencies": {
     "axios": "^0.17.1",
