--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "deploy":
-      "scp -r dist aso:www/rankgames2/ && scp index.html aso:www/rankgames2",
+    "deploy": "scp -r dist aso:www/rankgames2/ && scp index.html aso:www/rankgames2",
     "bd": "npm run build && npm run deploy"
   },
   "dependencies": {
@@ -16,6 +15,7 @@
     "boom": "^7.2.0",
     "bootstrap": "^4.1.0",
     "bootstrap-vue": "^2.0.0-rc.8",
+    "file-saver": "^1.3.8",
     "moment": "^2.22.1",
     "popper.js": "^1.14.3",
     "prettier": "^1.12.1",
