--- a/package.json
+++ b/package.json
@@ -1,52 +1,54 @@
 {
-  "name": "vue-rg",
-  "description": "A Vue.js project",
-  "version": "1.0.0",
-  "author": "Tyler Peckenpaugh <tyler@ty-pe.com>",
-  "private": true,
-  "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "deploy": "scp -r dist aso:www/rankgames2/ && scp index.html aso:www/rankgames2",
-    "bd": "npm run build && npm run deploy"
-  },
-  "dependencies": {
-    "axios": "^0.17.1",
-    "boom": "^7.2.0",
-    "bootstrap": "^4.1.0",
-    "bootstrap-vue": "^2.0.0-rc.8",
-    "file-saver": "^1.3.8",
-    "moment": "^2.22.1",
-    "popper.js": "^1.14.3",
-    "prettier": "^1.12.1",
-    "vue": "^2.5.16",
-    "vue-awesome": "^2.3.5",
-    "vue-img-loader": "^0.2.1",
-    "vue-router": "^3.0.1",
-    "vue-simple-spinner": "^1.2.8",
-    "vuejs-dialog": "^0.9.0",
-    "vuex": "^3.0.1",
-    "vuex-persistedstate": "^2.5.2"
-  },
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^6.0.0",
-    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-3": "^6.24.1",
-    "cross-env": "^5.1.4",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-plugin-vue": "^4.5.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.11",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^6.0.7",
-    "style-loader": "^0.19.0",
-    "vue-loader": "^13.7.1",
-    "vue-template-compiler": "^2.5.16",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.2"
-  }
+    "name": "vue-rg",
+    "description": "A Vue.js based boardgame ranking app.",
+    "version": "1.0.5",
+    "author": "Tyler Peckenpaugh <tyler@ty-pe.com>",
+    "private": true,
+    "scripts": {
+        "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+        "build": "cross-env NODE_ENV=production webpack --progress --hide-modules --env.patch",
+        "deploy": "scp -r dist/* aso:www/rankgames2/",
+        "bd": "npm run build && npm run deploy"
+    },
+    "dependencies": {
+        "axios": "^0.17.1",
+        "boom": "^7.2.0",
+        "bootstrap": "^4.1.0",
+        "bootstrap-vue": "^2.0.0-rc.8",
+        "file-saver": "^1.3.8",
+        "moment": "^2.22.1",
+        "popper.js": "^1.14.3",
+        "prettier": "^1.12.1",
+        "vue": "^2.5.16",
+        "vue-awesome": "^2.3.5",
+        "vue-img-loader": "^0.2.1",
+        "vue-router": "^3.0.1",
+        "vue-simple-spinner": "^1.2.8",
+        "vuejs-dialog": "^0.9.0",
+        "vuex": "^3.0.1",
+        "vuex-persistedstate": "^2.5.2"
+    },
+    "devDependencies": {
+        "babel-core": "^6.26.0",
+        "babel-loader": "^6.0.0",
+        "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-preset-env": "^1.6.1",
+        "babel-preset-stage-3": "^6.24.1",
+        "cross-env": "^5.1.4",
+        "css-loader": "^0.28.11",
+        "eslint": "^4.19.1",
+        "eslint-plugin-vue": "^4.5.0",
+        "extract-text-webpack-plugin": "^3.0.2",
+        "file-loader": "^1.1.11",
+        "html-webpack-plugin": "^3.2.0",
+        "node-sass": "^4.9.0",
+        "sass-loader": "^6.0.7",
+        "style-loader": "^0.19.0",
+        "vue-loader": "^13.7.1",
+        "vue-template-compiler": "^2.5.16",
+        "webpack": "^3.11.0",
+        "webpack-auto-inject-version": "^1.1.0",
+        "webpack-dev-server": "^2.11.2"
+    }
 }
