--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
         "build": "cross-env NODE_ENV=production webpack --progress --hide-modules --env.patch",
         "deploy": "scp -r dist/* aso:www/rankgames2/",
-        "bd": "npm run build && npm run deploy"
+        "patch": "npm shrink && npm run build && npm run deploy",
+        "minor": "npm shrink && cross-env NODE_ENV=production webpack --progress --hide-modules --env.minor && npm run deploy",
+        "major": "npm shrink && cross-env NODE_ENV=production webpack --progress --hide-modules --env.major && npm run deploy"
     },
     "dependencies": {
         "axios": "^0.17.1",
@@ -35,6 +37,7 @@
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "babel-preset-env": "^1.6.1",
         "babel-preset-stage-3": "^6.24.1",
+        "clean-webpack-plugin": "^0.1.19",
         "cross-env": "^5.1.4",
         "css-loader": "^0.28.11",
         "eslint": "^4.19.1",
