--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "babel-preset-env": "^1.6.1",
         "babel-preset-stage-3": "^6.24.1",
         "clean-webpack-plugin": "^0.1.19",
+        "copy-webpack-plugin": "^4.5.1",
         "cross-env": "^5.1.4",
         "css-loader": "^0.28.11",
         "eslint": "^4.19.1",
