--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "vue-rg",
     "description": "A Vue.js based boardgame ranking app.",
-    "version": "1.1.2",
+    "version": "1.2.2",
     "author": "Tyler Peckenpaugh <tyler@ty-pe.com>",
     "private": true,
     "scripts": {
@@ -14,45 +14,45 @@
     },
     "dependencies": {
         "axios": "^0.17.1",
-        "boom": "^7.2.0",
-        "bootstrap": "^4.1.0",
-        "bootstrap-vue": "^2.0.0-rc.8",
+        "boom": "^7.3.0",
+        "bootstrap": "^4.3.1",
+        "bootstrap-vue": "^2.0.4",
         "file-saver": "^1.3.8",
-        "moment": "^2.22.1",
-        "popper.js": "^1.14.3",
-        "prettier": "^1.12.1",
-        "vue": "^2.5.16",
-        "vue-awesome": "^2.3.5",
+        "moment": "^2.24.0",
+        "popper.js": "^1.16.0",
+        "prettier": "^1.19.1",
+        "vue": "^2.6.10",
+        "vue-awesome": "^2.3.8",
         "vue-img-loader": "^0.2.1",
-        "vue-router": "^3.0.1",
+        "vue-router": "^3.1.3",
         "vue-simple-spinner": "^1.2.8",
         "vuejs-dialog": "^0.9.0",
-        "vuex": "^3.0.1",
-        "vuex-persistedstate": "^2.5.2"
+        "vuex": "^3.1.1",
+        "vuex-persistedstate": "^2.7.0"
     },
     "devDependencies": {
-        "babel-core": "^6.26.0",
+        "babel-core": "^6.26.3",
         "babel-loader": "^6.0.0",
         "babel-plugin-transform-es2015-destructuring": "^6.23.0",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
-        "babel-preset-env": "^1.6.1",
+        "babel-preset-env": "^1.7.0",
         "babel-preset-stage-3": "^6.24.1",
         "clean-webpack-plugin": "^0.1.19",
-        "copy-webpack-plugin": "^4.5.1",
-        "cross-env": "^5.1.4",
+        "copy-webpack-plugin": "^4.6.0",
+        "cross-env": "^5.2.1",
         "css-loader": "^0.28.11",
         "eslint": "^4.19.1",
-        "eslint-plugin-vue": "^4.5.0",
+        "eslint-plugin-vue": "^4.7.1",
         "extract-text-webpack-plugin": "^3.0.2",
         "file-loader": "^1.1.11",
         "html-webpack-plugin": "^3.2.0",
-        "node-sass": "^4.9.0",
+        "node-sass": "^4.13.0",
         "sass-loader": "^6.0.7",
         "style-loader": "^0.19.0",
-        "vue-loader": "^13.7.1",
-        "vue-template-compiler": "^2.5.16",
-        "webpack": "^3.11.0",
-        "webpack-auto-inject-version": "^1.1.0",
-        "webpack-dev-server": "^2.11.2"
+        "vue-loader": "^13.7.3",
+        "vue-template-compiler": "^2.6.10",
+        "webpack": "^3.12.0",
+        "webpack-auto-inject-version": "^1.2.2",
+        "webpack-dev-server": "^2.11.5"
     }
 }
